@@ -1,7 +1,7 @@
 signature POSIX_PROCESS =
     sig
 	eqtype pid
-	type signal
+        eqtype signal
 
 	datatype exit_status
 	  = W_EXITED
@@ -20,8 +20,7 @@ signature POSIX_PROCESS =
 	val fork : unit -> pid option
 	val exit : Word8.word -> 'a	    
 	val waitpid : waitpid_arg * W.flags list -> pid * exit_status
-  val wait : unit -> pid * exit_status
-  val pidToWord : pid -> SysWord.word
-  val exec : string * string list -> 'a
-
+	val wait : unit -> pid * exit_status
+	val pidToWord : pid -> SysWord.word
+	val exec : string * string list -> 'a
     end
